Estudar a classe Integer e entender autoboxing e unboxing